InnoDB: Do not get a lock for consistent reads (Bug #3894)

sql/ha_innodb.cc:
  start_stmt(): Obtain an exclusive lock for other than plain SELECT